--- a/index.html
+++ b/index.html
@@ -262,11 +262,13 @@
 
         </main>
 
+        <!-- 
+
         <div class="mx-auto max-w-7xl px-2 my-2"> 
             <h2 class="font-bold text-3xl">
                Bebidas
             </h2>
-        </div>
+        </div> -->
 
         <!--GRID BEBIDAS
 
@@ -325,12 +327,12 @@
 
             <!-- FIM BEBIDA ITEM -->
 
-        </div>
+        <!-- </div> -->
 
 
-        <!-- FIM GRID BEBIDAS-->
+        <!-- FIM GRID BEBIDAS
 
-     </div>
+     </div> -->
 
        <!-- FIM MENU -->
 
